# lmstudio_hf

./: README.md  lmstudio_hf.py  pyproject.toml
.beads/: metadata.json
