[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmstudio-hf"
version = "1.0.0"
description = "A command-line utility to manage MLX models between your Hugging Face cache and LM Studio"
authors = [{name = "Ivan Fioravanti"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
lmstudio-hf = "lmstudio_hf:main"
